--- a/config/reviung41.conf
+++ b/config/reviung41.conf
@@ -1,8 +1,8 @@
-
-
-
 # Uncomment the following lines to enable RGB underglow
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
 CONFIG_ZMK_HID_REPORT_TYPE_NKRO=y
 CONFIG_USB_HID_POLL_INTERVAL_MS=1
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_IDLE_TIMEOUT=120000
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=600000
