--- a/config/reviung41.conf
+++ b/config/reviung41.conf
@@ -6,3 +6,4 @@ CONFIG_USB_HID_POLL_INTERVAL_MS=1
 CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_TIMEOUT=120000
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=600000
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
