--- a/config/reviung41.conf
+++ b/config/reviung41.conf
@@ -7,3 +7,4 @@ CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_TIMEOUT=120000
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=600000
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+CONFIG_ZMK_RGB_UNDERGLOW_CUSTOM_EFFECT=y
